--- a/stm32g431rbt6_mc_ABZ.ioc
+++ b/stm32g431rbt6_mc_ABZ.ioc
@@ -132,8 +132,9 @@ Mcu.IP18=TIM2
 Mcu.IP19=TIM3
 Mcu.IP2=COMP1
 Mcu.IP20=TIM8
-Mcu.IP21=USART1
-Mcu.IP22=USART3
+Mcu.IP21=TIM17
+Mcu.IP22=USART1
+Mcu.IP23=USART3
 Mcu.IP3=COMP2
 Mcu.IP4=COMP3
 Mcu.IP5=COMP4
@@ -141,7 +142,7 @@ Mcu.IP6=CORDIC
 Mcu.IP7=CRC
 Mcu.IP8=DAC1
 Mcu.IP9=DAC3
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -197,11 +198,12 @@ Mcu.Pin53=VP_SYS_VS_Systick
 Mcu.Pin54=VP_SYS_VS_DBSignals
 Mcu.Pin55=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin56=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=57
+Mcu.PinsNb=58
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
@@ -365,7 +367,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_ADC1_Init-ADC1-false-LL-true,4-MX_ADC2_Init-ADC2-false-LL-true,5-MX_COMP1_Init-COMP1-false-LL-true,6-MX_COMP2_Init-COMP2-false-LL-true,7-MX_COMP3_Init-COMP3-false-LL-true,8-MX_COMP4_Init-COMP4-false-LL-true,9-MX_DAC1_Init-DAC1-false-LL-true,10-MX_DAC3_Init-DAC3-false-LL-true,11-MX_I2C1_Init-I2C1-false-LL-true,12-MX_I2C3_Init-I2C3-false-LL-true,13-MX_SPI2_Init-SPI2-false-LL-true,14-MX_TIM1_Init-TIM1-false-LL-true,15-MX_TIM3_Init-TIM3-false-LL-true,16-MX_TIM8_Init-TIM8-false-LL-true,17-MX_DMA_Init-DMA-false-LL-true,18-MX_USART1_UART_Init-USART1-false-LL-true,19-MX_USART3_UART_Init-USART3-false-LL-true,20-MX_TIM2_Init-TIM2-false-LL-true,21-MX_CORDIC_Init-CORDIC-false-LL-true,22-MX_CRC_Init-CRC-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_ADC1_Init-ADC1-false-LL-true,4-MX_ADC2_Init-ADC2-false-LL-true,5-MX_COMP1_Init-COMP1-false-LL-true,6-MX_COMP2_Init-COMP2-false-LL-true,7-MX_COMP3_Init-COMP3-false-LL-true,8-MX_COMP4_Init-COMP4-false-LL-true,9-MX_DAC1_Init-DAC1-false-LL-true,10-MX_DAC3_Init-DAC3-false-LL-true,11-MX_I2C1_Init-I2C1-false-LL-true,12-MX_I2C3_Init-I2C3-false-LL-true,13-MX_SPI2_Init-SPI2-false-LL-true,14-MX_TIM1_Init-TIM1-false-LL-true,15-MX_TIM3_Init-TIM3-false-LL-true,16-MX_TIM8_Init-TIM8-false-LL-true,17-MX_DMA_Init-DMA-false-LL-true,18-MX_USART1_UART_Init-USART1-false-LL-true,19-MX_USART3_UART_Init-USART3-false-LL-true,20-MX_TIM2_Init-TIM2-false-LL-true,21-MX_CORDIC_Init-CORDIC-false-LL-true,22-MX_CRC_Init-CRC-false-LL-true,23-MX_TIM17_Init-TIM17-false-LL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -455,6 +457,8 @@ TIM1.SourceBRKCOMP2=TIM_BREAKINPUTSOURCE_ENABLE
 TIM1.SourceBRKCOMP3=TIM_BREAKINPUTSOURCE_ENABLE
 TIM1.SourceBRKCOMP4=TIM_BREAKINPUTSOURCE_ENABLE
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM17.IPParameters=Prescaler
+TIM17.Prescaler=16
 TIM2.CounterMode=TIM_COUNTERMODE_UP
 TIM2.IPParameters=TIM_MasterOutputTrigger,PeriodNoDither,CounterMode
 TIM2.PeriodNoDither=17000
@@ -494,6 +498,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_SYS_V_VREFBUF.Mode=ExternalMode
 VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
