--- a/stm32g431rbt6_mc_ABZ.ioc
+++ b/stm32g431rbt6_mc_ABZ.ioc
@@ -60,7 +60,25 @@ Dma.I2C1_RX.2.SyncSignalID=NONE
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
 Dma.Request2=I2C1_RX
-Dma.RequestsNb=3
+Dma.Request3=SPI2_RX
+Dma.RequestsNb=4
+Dma.SPI2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.3.EventEnable=DISABLE
+Dma.SPI2_RX.3.Instance=DMA2_Channel1
+Dma.SPI2_RX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_RX.3.MemInc=DMA_MINC_DISABLE
+Dma.SPI2_RX.3.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.3.RequestNumber=1
+Dma.SPI2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.3.SignalID=NONE
+Dma.SPI2_RX.3.SyncEnable=DISABLE
+Dma.SPI2_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.3.SyncRequestNumber=1
+Dma.SPI2_RX.3.SyncSignalID=NONE
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.EventEnable=DISABLE
 Dma.USART1_RX.0.Instance=DMA1_Channel2
@@ -197,6 +215,7 @@ NVIC.ADC1_2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
